new: Unit.(rotate, isomorphic, calc_max_rot)

--- a/honeycaml/Makefile
+++ b/honeycaml/Makefile
@@ -2,14 +2,10 @@ GEN_DIR := generated
 ATDGEN := atdgen -j-std -j-strict-fields
 OBUILD_FLAGS := $(CORES) -I $(GEN_DIR) -use-ocamlfind -cflags -w,-30-40
 
-atd: game.atd unit.atd cell.atd solution.atd
+atd: game.atd solution.atd
 	-mkdir $(GEN_DIR) 2>/dev/null
 	$(ATDGEN) -t game.atd -o $(GEN_DIR)/game
 	$(ATDGEN) -j game.atd -o $(GEN_DIR)/game
-	$(ATDGEN) -t unit.atd -o $(GEN_DIR)/unit
-	$(ATDGEN) -j unit.atd -o $(GEN_DIR)/unit
-	$(ATDGEN) -t cell.atd -o $(GEN_DIR)/cell
-	$(ATDGEN) -j cell.atd -o $(GEN_DIR)/cell
 	$(ATDGEN) -t solution.atd -o $(GEN_DIR)/solution
 	$(ATDGEN) -j solution.atd -o $(GEN_DIR)/solution
 
