--- a/releases/1/Makefile
+++ b/releases/1/Makefile
@@ -2,8 +2,8 @@ CC = g++
 CFLAGS = -O2 -Wall
 
 
-steak: jsoncpp.o main.o system.o
-	g++ jsoncpp.o main.o system.o -o steak
+play_icfp2015: jsoncpp.o main.o system.o
+	g++ jsoncpp.o main.o system.o -o play_icfp2015
 
 .cpp.o:
 	$(CC) $(CFLAGS) -o $@ -c $<
