Fuck scopper, FUCK

--- a/honeycaml/Makefile
+++ b/honeycaml/Makefile
@@ -15,5 +15,8 @@ honey: atd
 scopper: atd
 	ocamlbuild $(OBUILD_FLAGS) scopper.native
 
+scop:
+	find ../solutions/ -type f | xargs ./scopper.native
+
 clean:
 	ocamlbuild -clean
